--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
         "ext-tidy": "*",
         "fossar/htmlawed": "^1.2.8",
         "guzzlehttp/psr7": "^2.0",
-        "j0k3r/graby-site-config": "^1.0.139",
+        "j0k3r/graby-site-config": "^1.0.147",
         "j0k3r/httplug-ssrf-plugin": "^2.0",
         "j0k3r/php-readability": "^1.2.9",
         "monolog/monolog": "^1.18.0|^2.3",
@@ -60,6 +60,9 @@
         "rector": "vendor/bin/rector process -c maintenance/rector.config.php"
     },
     "config": {
-        "sort-packages": true
+        "sort-packages": true,
+        "allow-plugins": {
+            "phpstan/extension-installer": true
+        }
     }
 }
