rector: Update for latest version
- `removedAndAddedFilesCollector` was moved out of `AbstractRector` in https://github.com/rectorphp/rector-src/commit/55575af7d6ab0af6864ef33d50da7b0e07902794
- `CURRENT_STATEMENT` was deprecated in https://github.com/rectorphp/rector-src/commit/5cc41ac787fcfcc7a10dbee7645207d839e75982
- Rename the config to `rector.php` otherwise `UpgradeRectorConfigRector` will not be able to upgrade it.
- Switch to new config format: https://getrector.org/blog/new-in-rector-012-introducing-rector-config-with-autocomplete

Tested by reverting aac2f73727585d269c04ac6fba0105a079ab96ec and running `composer rector`.

--- a/composer.json
+++ b/composer.json
@@ -57,7 +57,7 @@
         }
     },
     "scripts": {
-        "rector": "vendor/bin/rector process -c maintenance/rector.config.php"
+        "rector": "vendor/bin/rector process -c maintenance/rector.php"
     },
     "config": {
         "sort-packages": true,
