--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,7 @@
         "simplepie/simplepie": "^1.5",
         "smalot/pdfparser": "^2.0",
         "symfony/options-resolver": "^3.4|^4.4|^5.3|^6.0",
-        "true/punycode": "^2.1"
+        "symfony/polyfill-intl-idn": "^1.26"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^3.0",
