composer: Add phpstan command
Useful for running it locally quickly.

--- a/composer.json
+++ b/composer.json
@@ -57,6 +57,7 @@
         }
     },
     "scripts": {
+        "phpstan": "phpstan analyse --memory-limit 512M",
         "rector": "vendor/bin/rector process -c maintenance/rector.php"
     },
     "config": {
