composer: Declare dependency on psr/http-client-implementation
The `psr-http/client-implementation` dependency appears to have been accidentally removed in ac5d7387c8579c5c4352f40afa2419a0ed7e5d67, while still being used.

Let’s switch to its spiritual successor `psr-http/client-implementation`, which is backed by PSR-18, and correctly declare the dependency.

--- a/composer.json
+++ b/composer.json
@@ -28,6 +28,7 @@
         "php-http/discovery": "^1.14",
         "php-http/httplug": "^2.2",
         "php-http/message": "^1.12",
+        "psr/http-client-implementation": "^1.0",
         "simplepie/simplepie": "^1.8",
         "smalot/pdfparser": "^2.0",
         "symfony/options-resolver": "^3.4|^4.4|^5.3|^6.0",
