--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "ext-curl": "*",
         "ext-tidy": "*",
         "fossar/htmlawed": "^1.3.3",
+        "guzzlehttp/promises": "^1.5",
         "guzzlehttp/psr7": "^2.0",
         "j0k3r/graby-site-config": "^1.0.181",
         "j0k3r/httplug-ssrf-plugin": "^3.0",
