--- a/composer.json
+++ b/composer.json
@@ -15,15 +15,15 @@
     "minimum-stability": "dev",
     "prefer-stable": true,
     "require": {
-        "php": ">=7.4",
+        "php": ">=8.1",
         "ext-curl": "*",
         "ext-tidy": "*",
         "fossar/htmlawed": "^1.2.8",
         "guzzlehttp/psr7": "^2.0",
         "j0k3r/graby-site-config": "^1.0.147",
         "j0k3r/httplug-ssrf-plugin": "^2.0",
-        "j0k3r/php-readability": "^1.2.9",
-        "monolog/monolog": "^1.18.0|^2.3",
+        "j0k3r/php-readability": "dev-master",
+        "monolog/monolog": "^3",
         "php-http/client-common": "^2.5",
         "php-http/discovery": "^1.14",
         "php-http/httplug": "^2.2",
